# pyimageconf2018

./: 001_train_hog_detector.py  002_run_hog_detector.py  004_train_face_landmarking_model.py  006_hungarian_algorithm.py  011_global_optimization.py  014_separable_filters.py  015_train_hog_detector_nuclear_norm.py  018_run_multiple_hog_detectors.py  021_find_galaxies.py  023_find_galaxies_superfast.py  024_find_lines.py  025_find_knots.py  028_find_paper.py  032_find_paper5.py  033_find_paper6.py  034_find_paper7.py  036_mser.py  037_auto_train_binary_classifier.py  038_sum_cache_simd_examples.py  LICENSE  README.md
dlib/: .hg_archival.txt
images/find_spinner/: spinner.m4v
images/small_face_dataset/: faces_5poses.xml  faces_600.xml
superfast/: CMakeLists.txt  cuda_stuff.cu  setup.py
superfast/test/: test_stuff.py
workshop/: 005_run_face_landmarking_model.py  008_make_bbr_training_dataset.py  009_train_bbr_model.py  016_run_nuclear_hog_detector.py  017_train_multiple_hog_detectors.py  022_find_galaxies2.py  026_find_knots2.py  027_what_is_hough_transform.py  029_find_paper2.py  030_find_paper3.py  031_find_paper4.py  rect_filter.pickle
workshop/superfast/: cuda_stuff.h  main.cpp
workshop_material/: 003_make_empty_face_landmarking_xml_file.py  007_hog_detector_8pix_stride.py  010_detect_face_with_bbr.py  012_train_bbr_model_with_hyperparameter_search.py  013_detect_face_with_bbr_and_kalman_filter.py  019_train_multiple_hog_detectors_hyper_param_opt.py  020_hash_images.py  035_find_spinner.py  039_threaded_data_loading.py  040_cuda.py  tools.py
(+1 files in other folders)
